2007.Oct.30 (svn.debian.org/tux4kids - revision 311)

  Code:
      * Uncrufting! - eliminated tuxtype_playsound(), moved playsound() to audio.c,
        and removed playsound.c and .h; eliminated alphabet.c; moved DarkenScreen()
        to SDL_extras.c and eliminated pause.c; moved SwitchScreenMode() to SDL_extras.c.

      David Bruce <dbruce@tampabay.rr.com>

2007.Oct.29 (svn.debian.org/tux4kids - revision 310)

  Version 1.5.7

  Build:
      * Implementation of proper "install" and "uninstall" targets in
        the Makefile.am's, replacing some old quick-and-dirty hackery.
      * gettext/po/intl needs testing.
  Code:
      * Removal of numerous unused image files as well as unused code
        in options.c (old options system), savings ~400 KB.
  Graphics:
      * Rest of sprites updated to "crystal" look.
  Game:
      * Inactivated mouse warping in menus (at least for now) - the
        users I've tested it on find the warping to be unexpected and
        confusing.

      David Bruce <dbruce@tampabay.rr.com>

2007.Oct.19 (svn.debian.org/tux4kids - revision 306)

  Build:
      * More gettext/po/intl work (in progress)
  Game:
      * Implementation of "gold stars" - the game keeps track of what
        lessons have been successfully completed and displays a gold
        star icon for completed lessons, with a grayed-out icon for lessons
        that have not been completed.
      * Fix of a bug in the menu code causing unintended exiting of the
        game.
  Graphics:
      * Most of sprites revised to have a more uniform and modern shiny/
      "crystal" look - remainder to be finished shortly.

      David Bruce <dbruce@tampabay.rr.com>

2007.Oct.19 (svn.debian.org/tux4kids - revision 303)

  Build:
      * Work on gettext-related stuff - hope to get i18n supported on all
        platforms (in progress)

      David Bruce <dbruce@tampabay.rr.com>


2007.Oct.12 (svn.debian.org/tux4kids - revision 298)
  Options: